test/types/range/lydia/badRange-string-upper.good
badRange-string-upper.chpl:1: In function 'main':
badRange-string-upper.chpl:2: error: param for-loops defined using bounds of type 'int(64)..string' are not currently supported
